--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "PORT=3050 react-scripts start",
+    "start": "set PORT=3050 && react-scripts start",
+    "start-mac": "PORT=3050 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -63,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/md5": "^2.3.2"
   }
 }
